Feat: tidy up code and add device's update endpoint
